[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smu-mcp"
version = "1.0.0"
description = "SMU MCP Server for meal and schedule management"
authors = [
    {name = "SMU Team"}
]
requires-python = ">=3.11"
dependencies = [
    "pymysql"
]

[project.scripts]
smu-mcp = "smu_mcp:main"
